# biosignal-processing

./: .gitignore  AGENTS.md  README.md  cli.py  documento.ist  documento.tex  pyproject.toml
.agent/skills/biosignal-stage-pipeline/: README.md  SKILL.md
.agent/skills/biosignal-tex/: SKILL.md  analyze_metrics.py
1-pre-textuais/: epigrafe.tex  resumo.tex
2-textuais/: 2-fundamentacao-teorica.tex  3-metodologia.tex
docs/: ARCHITECTURE.md  CONTEXT.md  DATA_LOADING.md  NEW_SESSION.md  PRD.md  documento.tex
docs/1-pre-textuais/: dedicatoria.tex
docs/2-textuais/: 3-metodologia.tex
docs/lib/: preambulo.tex
draft/: PLAN_STAGE1.md  PROFESSOR_FEEDBACK_IMPROVEMENTS.md  PROGRESS_STAGE1.md  STAGE10_PLAN.md  STAGE10_PROGRESS.md  STAGE2_SQI_PLAN.md  STAGE3_PLAN.md  STAGE3_PROGRESS.md  STAGE4_GEMINI_FEEDBACK.md  STAGE4_PLAN.md  STAGE4_PROGRESS.md  STAGE5_PLAN.md  STAGE5_PROGRESS.md  STAGE6_PLAN.md  STAGE6_PROGRESS.md  STAGE7_PLAN.md  STAGE7_PROGRESS.md  STAGE8_PLAN.md  STAGE8_PROGRESS.md  STAGE9_PLAN.md  STAGE9_PROGRESS.md
scripts/: check_clipping.py  load_drivedb.py  load_ieee_multimodal.py  plot_drivedb.py  plot_ieee_multimodal.py
scripts/ieee/: ecg.py  eeg.py  emg.py  fnirs.py
src/biosignal/: __init__.py  __main__.py  cli.py  config.py
src/biosignal/io/: ieee.py  (+1 more)
tex/: documento.ist  documento.tex
tex/1-pre-textuais/: abstract.tex  agradecimentos.tex  dedicatoria.tex  resumo.tex
tex/2-textuais/: 1-introducao.tex  2-fundamentacao-teorica.tex  3-metodologia.tex  4-resultados.tex  5-conclusao.tex
tex/3-pos-textuais/: referencias.bib
tex/lib/: preambulo.tex
(+13 files in other folders)
