[project]
name = "biosignal-processing"
version = "0.1.0"
description = "Biosignal Processing Pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.10.2",
    "mne>=1.6.0",
    "typer>=0.12",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "h5py>=3.16.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biosignal"]
